<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pogonya_Quest_Mari_End">

    <ImageView
        android:id="@+id/PictureOfMari"
        android:layout_width="358dp"
        android:layout_height="247dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/description_photo_of_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/picture002_maria" />

    <TextView
        android:id="@+id/MariTitles"
        android:layout_width="272dp"
        android:layout_height="167dp"
        android:layout_marginTop="40dp"
        android:text="@string/Congratulations"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PictureOfMari" />

    <Button
        android:id="@+id/MariaEndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_guys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MariTitles" />
</androidx.constraintlayout.widget.ConstraintLayout>