<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pogonya_Quest_BellTower">

    <ImageView
        android:id="@+id/PictureOfBellTower"
        android:layout_width="358dp"
        android:layout_height="247dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/description_photo_of_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_2" />

    <EditText
        android:id="@+id/BellTowerLine"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginTop="38dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_magic_word"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PictureOfBellTower" />

    <Button
        android:id="@+id/BellTowerButton"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BellTowerLine" />
</androidx.constraintlayout.widget.ConstraintLayout>