<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5CB43"
        tools:context=".Boronyavo.BoronyavoCongratulationsActivity">
    <ImageView
            android:id="@+id/PictureOfBoronyavo"
            android:layout_width="358dp"
            android:layout_height="247dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/description_photo_of_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/picture011_boronyava_church"/>
    <TextView
            android:id="@+id/BoronyavoTitles"
            android:layout_width="272dp"
            android:layout_height="167dp"
            android:layout_marginTop="40dp"
            android:text="@string/Congratulations"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PictureOfBoronyavo" android:textColor="#004D40"/>
    <Button
            android:id="@+id/BoronyavoEndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_guys"
            android:backgroundTint="#F0AD28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BoronyavoTitles" android:textColor="#5D4037"/>
</androidx.constraintlayout.widget.ConstraintLayout>