<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5CB43"
        tools:context=".Boronyavo.BoronyavoQuestActivity">
    <EditText
            android:id="@+id/BoronyavoLine"
            android:layout_width="318dp"
            android:layout_height="56dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/text_magic_word"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/BoronyavoButtonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BoronyavoPicture"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:id="@+id/BoronyavoButtonNext"
            android:layout_width="131dp"
            android:layout_height="56dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="#F0AD28"
            android:text="@string/button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BoronyavoLine"/>
    <ImageView
            android:id="@+id/BoronyavoPicture"
            android:layout_width="358dp"
            android:layout_height="247dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/description_photo_of_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/picture011_boronyava_church"
            tools:ignore="ImageContrastCheck"/>
</androidx.constraintlayout.widget.ConstraintLayout>