<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5CB43"
        tools:context=".DukhovaKrynytsia.WellSpiritQuestActivity">
    <EditText
            android:id="@+id/WellSpiritLine"
            android:layout_width="318dp"
            android:layout_height="56dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:hint="@string/text_magic_word"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/WellSpiritButtonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WellSpiritPicture"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:id="@+id/WellSpiritButtonNext"
            android:layout_width="131dp"
            android:layout_height="56dp"
            android:layout_marginTop="26dp"
            android:backgroundTint="#F0AD28"
            android:text="@string/button_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WellSpiritLine"/>
    <ImageView
            android:id="@+id/WellSpiritPicture"
            android:layout_width="358dp"
            android:layout_height="247dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/description_photo_of_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/picture021_dukhovakrynytsya_stage"
            tools:ignore="ImageContrastCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>