<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5CB43"
        tools:context=".MainMenuActivity">
    <ImageView
            android:id="@+id/povodyrchyk_picture"
            android:layout_width="224dp"
            android:layout_height="215dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/vaif_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_povodyrchyk1"/>

    <ImageView
            android:id="@+id/vaif_picture"
            android:layout_width="94dp"
            android:layout_height="78dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="38dp"
            android:contentDescription="@string/vaif_ic"
            app:layout_constraintEnd_toStartOf="@+id/povodyrchyk_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vaif"
            tools:ignore="ImageContrastCheck" />

    <Button
            android:id="@+id/MainButton_Play"
            android:layout_width="198dp"
            android:layout_height="96dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#F0AD28"
            android:text="@string/button_play"
            app:layout_constraintBottom_toTopOf="@+id/MainButtonAbout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/povodyrchyk_picture"
            tools:ignore="MissingConstraints,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
            android:id="@+id/MainButtonAbout"
            android:layout_width="198dp"
            android:layout_height="96dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="#F0AD28"
            android:text="@string/button_about"
            app:layout_constraintBottom_toTopOf="@+id/MainButtonExit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainButton_Play"
            tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
            android:id="@+id/MainButtonExit"
            android:layout_width="198dp"
            android:layout_height="96dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="#F0AD28"
            android:text="@string/button_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainButtonAbout"
            tools:ignore="MissingConstraints,TextContrastCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>