<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5CB43"
        tools:context=".MapsListActivity">
    <ScrollView
            android:id="@+id/MapsListScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="SpeakableTextPresentCheck">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <ImageButton
                            android:id="@+id/btn_pohonya"
                            android:layout_width="155dp"
                            android:layout_height="111dp"
                            android:layout_gravity="center"
                            android:backgroundTint="#F0AD28"
                            android:contentDescription="@string/todo"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/picture001_pohonya_church"
                            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"/>
                    <TextView
                            android:id="@+id/Pohonya"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/pohonya"
                            android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <ImageButton
                            android:id="@+id/btn_Boronyava"
                            android:layout_width="155dp"
                            android:layout_height="111dp"
                            android:layout_gravity="center"
                            android:backgroundTint="#F0AD28"
                            android:contentDescription="@string/todo"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/picture011_boronyava_church"
                            tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,SpeakableTextPresentCheck"/>
                    <TextView
                            android:id="@+id/Boronyava"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:text="@string/boronyava"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <ImageButton
                            android:id="@+id/btn_WellSpirit"
                            android:layout_width="155dp"
                            android:layout_height="111dp"
                            android:backgroundTint="#F0AD28"
                            android:contentDescription="@string/todo"
                            android:scaleType="fitCenter"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/picture021_dukhovakrynytsya_stage"
                            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck"/>
                    <TextView
                            android:id="@+id/WellSpirit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/well_of_saint_spirit"
                            android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <ImageButton
                            android:id="@+id/btn_Krylos"
                            android:layout_width="155dp"
                            android:layout_height="111dp"
                            android:layout_gravity="center"
                            android:backgroundTint="#F0AD28"
                            android:contentDescription="@string/todo"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/picture030_krylos_scene"
                            tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,SpeakableTextPresentCheck"/>
                    <TextView
                            android:id="@+id/Krylos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:text="@string/krylos"/>
                >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="@+id/MapsListScroll"
            android:layout_marginTop="50dp">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
